--- a/about.html
+++ b/about.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About me</title>
+
     <style>
       body {
-        display: flex;
-        justify-content: center;
+        margin: 60px auto;
+        max-width: 800px;
       }
       :root {
         --primary-color: #6c63ff;
@@ -39,18 +40,20 @@
         display: flex;
         margin-top: 30px;
       }
-      .column {
-        text-align: center;
+
+      #content p {
         margin: 10px;
-        background: var(--secondary-color);
+      }
+
+      p {
+        padding: 20px;
+        background-color: var(--secondary-color);
         border-radius: 4px;
         font-size: 18px;
-        line-height: 1.5;
-        width: 380px;
+        line-height: 24px;
+        text-align: center;
       }
-      p {
-        padding: 0px 10px;
-      }
+
       h3 {
         display: block;
         text-align: center;
@@ -71,42 +74,37 @@
     </style>
   </head>
   <body>
-    <div>
-      <a href="index.html" id="homepage">Back to homepage</a>
-      <h1>About me</h1>
-      <h2>Front-end developer from San Francisco, California</h2>
-      <div id="content">
-        <div class="column">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
-            asperiores aspernatur tempora, accusantium modi, incidunt
-            repellendus nihil quia omnis pariatur error id necessitatibus
-            delectus mollitia iste itaque iusto sed eveniet.
-            <br />
-            <br />
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
-            asperiores aspernatur tempora, accusantium modi, incidunt
-            repellendus nihil quia omnis pariatur error id necessitatibus
-            delectus mollitia iste itaque iusto sed eveniet.
-          </p>
-        </div>
-        <div class="column">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
-            asperiores aspernatur tempora, accusantium modi, incidunt
-            repellendus nihil quia omnis pariatur error id necessitatibus
-            delectus mollitia iste itaque iusto sed eveniet.
-            <br />
-            <br />
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
-            asperiores aspernatur tempora, accusantium modi, incidunt
-            repellendus nihil quia omnis pariatur error id necessitatibus
-            delectus mollitia iste itaque iusto sed eveniet.
-          </p>
-        </div>
-      </div>
-      <h3 id="email">📮 Contact me</h3>
-      <a id="mail" href="Mailto:knktrang93@gmail.com">knktrang93@gmail.com</a>
+    <a href="index.html" id="homepage">Back to homepage</a>
+    <h1>About me</h1>
+    <h2>Front-end developer from San Francisco, California</h2>
+    <div id="content">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
+        asperiores aspernatur tempora, accusantium modi, incidunt repellendus
+        nihil quia omnis pariatur error id necessitatibus delectus mollitia iste
+        itaque iusto sed eveniet.
+        <br />
+        <br />
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
+        asperiores aspernatur tempora, accusantium modi, incidunt repellendus
+        nihil quia omnis pariatur error id necessitatibus delectus mollitia iste
+        itaque iusto sed eveniet.
+      </p>
+
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
+        asperiores aspernatur tempora, accusantium modi, incidunt repellendus
+        nihil quia omnis pariatur error id necessitatibus delectus mollitia iste
+        itaque iusto sed eveniet.
+        <br />
+        <br />
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
+        asperiores aspernatur tempora, accusantium modi, incidunt repellendus
+        nihil quia omnis pariatur error id necessitatibus delectus mollitia iste
+        itaque iusto sed eveniet.
+      </p>
     </div>
+    <h3 id="email">📮 Contact me</h3>
+    <a id="mail" href="Mailto:knktrang93@gmail.com">knktrang93@gmail.com</a>
   </body>
 </html>
